2010-03-18  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Adam Roben and Anders Carlsson.

        https://bugs.webkit.org/show_bug.cgi?id=36210
        plugins/resize-from-plugin.html fails on some platforms

        Turns out that most platforms don't use "cross-platform" main.cpp. Copied code added for
        the test to their versions of the file.

        * DumpRenderTree/unix/TestNetscapePlugin/TestNetscapePlugin.cpp:
        (webkit_test_plugin_set_window):
        * DumpRenderTree/win/TestNetscapePlugin/main.cpp:
        (NPP_SetWindow):

2010-03-18  Leandro Pereira  <leandro@profusion.mobi>

        Reviewed by Kenneth Rohde Christiansen.

        Add support to run-launcher to open the EFL example browser.
        http://webkit.org/b/36181

        * Scripts/webkitdirs.pm:
        * Scripts/run-launcher:

2010-03-18  Sergio Villar Senin  <svillar@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Failing tests http/tests/misc/image-blocked-src-change.html
        & http/tests/misc/image-blocked-src-no-change.html
        https://bugs.webkit.org/show_bug.cgi?id=36227

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (webViewConsoleMessage): print only the file name instead of the
        whole URI when printing messages with local URI's

2010-03-18  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Teach what-broke how to look up reviewer and author Committer objects by name
        https://bugs.webkit.org/show_bug.cgi?id=36264

        * Scripts/webkitpy/commands/queries.py:
         - Add committer_by_name lookups for both reviewer and author
         - Improve printing in the cases where lookups fail.
        * Scripts/webkitpy/committers.py:
         - Add committer_by_name
        * Scripts/webkitpy/committers_unittest.py:
         - Test committer_by_name

2010-03-17  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        create-rollout should actually fill out the description